<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/interactive_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/gcsd_run_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/gcsd_id_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="GCS ID" />

            <EditText
                android:id="@+id/gcsd_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".1"
                android:ems="10"
                android:inputType="number"
                android:text="0" />

            <Button
                android:id="@+id/start_gcsd_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:onClick="startGCSD"
                android:text="Start GCSD" />

            <Button
                android:id="@+id/stop_gcsd_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:enabled="false"
                android:onClick="stopGCSD"
                android:text="Stop GCSD" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/run_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="20dp">

            <LinearLayout
                android:id="@+id/control_buttons_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10dp">

                <Button
                    android:id="@+id/start_xop_button"
                    android:layout_width="125dp"
                    android:layout_height="65dp"
                    android:onClick="startXOPService"
                    android:text="@string/start_xop" />

                <Button
                    android:id="@+id/stop_xop_button"
                    android:layout_width="125dp"
                    android:layout_height="65dp"
                    android:onClick="stopXOPService"
                    android:text="@string/stop_xop" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <Button
                    android:id="@+id/state_button"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerInParent="true" />
            </RelativeLayout>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@android:color/holo_blue_light" />

        <LinearLayout
            android:id="@+id/mgen_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="invisible">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/mgen_address_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/mgen_port_label"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/mgen_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:inputType="text"
                    android:text="@string/mgen_address"
                    android:tag="@string/mgen_address" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/mgen_port_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/mgen_port_label"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/mgen_port"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:inputType="text"
                    android:text="@string/mgen_port"
                    android:tag="@string/mgen_port" />
            </LinearLayout>

            <Button
                android:id="@+id/startstop_mgen_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="startStopMGEN"
                android:text="@string/startstop_mgen" />
        </LinearLayout>

        <!-- Traffic Generator -->
        <LinearLayout
            android:id="@+id/chat_trafficgen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/chatroom_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/chatroom_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/chatroom_label"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/chatroom_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:inputType="text"
                    android:text="@string/chatroom_text"
                    android:tag="@string/chatroom_text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/username_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/username_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/username_label"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/username_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:inputType="text"
                    android:text="@string/username_text"
                    android:tag="@string/username_text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/password_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/password_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/password_label"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/password_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:inputType="text"
                    android:text="@string/password_text"
                    android:tag="@string/password_text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/server_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/server_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/server_label"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/server_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:inputType="text"
                    android:text="@string/server_text"
                    android:tag="@string/server_text" />
            </LinearLayout>

            <Button
                android:id="@+id/startstop_chat_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="startStopChatTraffic"
                android:text="@string/startstop_chat" />
        </LinearLayout>
        <!--
        <LinearLayout
            android:id="@+id/interactions_buttons"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingTop="10dp" >

            <Button
                android:id="@+id/local_users_button"
                android:layout_width="125dp"
                android:layout_height="65dp"
                android:onClick="popUpLocalUsers"
                android:text="@string/local_users" />

            <Button
                android:id="@+id/discovered_users_button"
                android:layout_width="125dp"
                android:layout_height="65dp"
                android:onClick="popUpRemoteUsers"
                android:text="@string/discovered_users" />

            <Button
                android:id="@+id/discovered_rooms_button"
                android:layout_width="125dp"
                android:layout_height="65dp"
                android:onClick="popUpRooms"
                android:text="@string/discovered_rooms" />

            <Button
                android:id="@+id/room_occupants_button"
                android:layout_width="125dp"
                android:layout_height="65dp"
                android:onClick="popUpRoomsForOccupants"
                android:text="@string/room_occupants" />
        </LinearLayout>
        -->
    </LinearLayout>

    <TextView
        android:id="@+id/info_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:freezesText="true" />

</FrameLayout>